--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sovMusic",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://daniel.opatich.github.io/SovereignMusic",
+  "homepage": "http://SovereignMusic.github.io/SovereignMusic",
   "devDependencies": {
     "gh-pages": "^0.12.0",
     "react-scripts": "0.8.4"
