--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sovMusic",
+  "name": "sovMusicLLP",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://SovereignMusic.github.io/home",
