--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sovMusicLLP",
+  "name": "SovereignMusicLLP",
   "version": "0.1.0",
   "private": false,
   "homepage": "http://SovereignMusic.github.io",
